Archive2/76/4cd6fe3b72bc01/output
main.cpp:4:7: error: looser throw specifier for 'virtual BadJumbleException::~BadJumbleException()'
 class BadJumbleException : public std::exception {
       ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/exception:64:13: error:   overriding 'virtual std::exception::~exception() throw ()'
     virtual ~exception() _GLIBCXX_USE_NOEXCEPT;
             ^
